Ajout de la route pour récupérer les 3 livres les mieux notés
